# still-on-task-llm

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  FINAL_PLAN.md  proposal_revised.md  proposal_revised.tex  pyproject.toml  requirements.txt  run.sh
.claude/: settings.local.json
configs/: base.yaml
final_results/: README.md  baseline_no_update.csv  data_inventory.csv  methods_index.csv  phase1_batch_scale1000.csv  phase2_batch_scale3000.csv  phase3_durability.csv  phase3_sequential_final.csv  phase3_sequential_trajectory.csv  phase4_compositional.csv  phase6_lora_deltas.csv  phase6_lora_subspace_overlap.csv  phase7_manifold_analysis.csv  phase7_manifold_pairs.json  phase7b_qd_format_pairs.json  phase7b_qd_format_probe.csv  phase8_format_ablation.csv  phase8b_fair_compute_ablation.csv  phase8b_fair_compute_pairs.json  phase8c_chained_comparison.csv  phase8c_chained_pairs.json  phase8d_variance_isolation.csv  phase8d_variance_isolation_pairs.json  phase9_leakfree_isolation.csv  phase9_leakfree_isolation_pairs.json  run_configs.csv  run_metadata.csv
notebooks/: colab_setup.ipynb
paper/: TODO.md  draft.md  draft_v2.md  ml_intern_arch_method.md  ml_intern_check_v2.md  ml_intern_clarity_review_gpt55.md  ml_intern_clarity_review_opus46.md  ml_intern_collapse_verdict.md  ml_intern_deployment_research.md  ml_intern_dsae_review.md  ml_intern_fi_sft_critique.md  ml_intern_fi_sft_novelty_research.md  ml_intern_genius_proposal.md  ml_intern_honesty_audit.md  ml_intern_implementation_spec.md  ml_intern_improvement_research.md  ml_intern_iteration3_verdict.md  ml_intern_manifold_reptile_review.md  ml_intern_paper_cleanup.md  ml_intern_paper_review.md  ml_intern_phase9_assessment.md  ml_intern_substantiveness_check.md  ml_intern_v2_review_gpt55.md  ml_intern_v2_review_opus46.md  novelty_audit.md  qd_postcutoff_queries.json  refs.bib  related_work_notes.md
paper_slides/: synergy_deck.pptx
paper_tex/: README.md  main.tex  references.bib
sagemaker/: launch.py  sync.py  (+1 more)
(+642 files in other folders)
